--- a/ChangeLog
+++ b/ChangeLog
@@ -67,7 +67,7 @@ YYYY-MM-DD Name LastName  <email@somewhere>
 
 	Added polished code to plot a years average daily rainfall against years.
 
-	* Added header include/rain_vs_years.h where the class RainVsYear is defined.
+	* Added header include/rain_vs_years.h where the struct RainVsYear is defined.
 	* Added sourcefile src/rain_vs_years.cxx where the function ReadAndDraw is defined.
 	* ReadAndDraw reads the contents of a parameter file with each date and it's rainfall, and draws a histogram showing the average daily rainfall for each year.
 	* Added call to ReadAndDraw in main.cxx, with datasets/lund_cleaned_rain.txt as parameter.
