changed the position of the pdfs and their paths in the cxx files. Also added entry to ChangeLog

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
 Einar Elén <einar.elen@fysik.lu.se>
 Florido Paganelli <florido.paganelli@fysik.lu.se>
+
+Marie-Philine Hebel <ma3648he-s@student.lu.se>
